# aws-lambda-mcp

./: .env.example  .gitignore  AGENTS.md  AIBOT_SETUP.md  COPILOT.md  Cargo.toml  DEPLOYMENT.md  DEPLOYMENT_SUMMARY.md  INFRASTRUCTURE.md  LAMBDA_DEBUG_SUMMARY.md  LICENSE  Makefile  README.md  fix_output.txt  test-lambda-direct.sh  tool_schema.json
.cargo/: config.toml
.github/: dependabot.yml
.github/codeql/: codeql-config.yml
.github/workflows/: automerge-dependabot.yml  automerge.yml  brown-ninja-bot.yml  brown-ninjs-bot.yml  checkov.yml  codeql.yml  deploy.yml  gemini-codeql-fix.yml  gemini-dispatch.yml  gemini-fix.yml  gemini-invoke.yml  gemini-review.yml  gemini-scheduled-triage.yml  gemini-triage.yml  gemini-write-tests.yml  opencode.yml  pr-environment.yml  preview-environment.yml  reusable-e2e-test.yml  reusable-github-app-token.yml  reusable-prepare.yml  reusable-rust.yml  reusable-terraform.yml  test-github-app-token.yml  tfsec.yml
.zig-cache/b/38298246e015ff84058fae003bf59e79/: builtin.zig
.zig-cache/b/88c0ad203a121ae6dda7fdded46e76d8/: builtin.zig
.zig-cache/b/be33caef82f0931eb33cc02e0c6c9ef6/: builtin.zig
.zig-cache/b/fe6f75c7de22de7aa741d42cd25ad892/: builtin.zig
.zig-cache/o/e60167aeed9c758c2f0513dac79dae62/: c.s  libc.so.6  libdl.so.2  libld.so.2  libm.so.6  libpthread.so.0  libresolv.so.2  librt.so.1  libutil.so.1  pthread.s
.zig-cache/tmp/: 12e6d132f0223440-10215725905553582194detect_compiler_family.o.d  131ace2444a47be3-11529666702479269105detect_compiler_family.o.d  19121e4b9c9f4593-573412400643809067detect_compiler_family.o.d  19280574b718f4a1-8936931530397924936detect_compiler_family.o.d  1a1671d6396c0b5a-18207754146005614324detect_compiler_family.o.d  1c5ac82179262074-15688868240833767915detect_compiler_family.o.d  1c6065b6639e0ab2-14409048192771515480detect_compiler_family.o.d  1ffbcf822c776c94-9200870479056320469detect_compiler_family.o.d  24e2266cb43fa2f6-5011574524896092429detect_compiler_family.o.d  26d6139ba1da8c6-9669032581476737356detect_compiler_family.o.d  2b4599f8ab02180d-17168394124255872416detect_compiler_family.o.d  2c26a35f6ea15995-11379668616303208280detect_compiler_family.o.d  2d675f5f74a109ba-5778018542816616816detect_compiler_family.o.d  2f2ead1bd2ff7148-18119810420188039797detect_compiler_family.o.d  2fc90c1b2dc87d46-7577444732995464749detect_compiler_family.o.d  30528e3c7f65cd28-9021279161617228168detect_compiler_family.o.d  31a1043c9ec25902-18298729615731023342detect_compiler_family.o.d  334e272526e822d-1538478437006027016detect_compiler_family.o.d  3634c79666e80d12-14050076111951177127detect_compiler_family.o.d  3a5b826cc1972169-5276135441553550651detect_compiler_family.o.d  3ab5bfc9cbc0d778-15622554751240760833detect_compiler_family.o.d  3dcf446868b5276d-12756113577775791833detect_compiler_family.o.d  3e3cb95183de9621-6915660195242082346detect_compiler_family.o.d  3fa0c43c23bf1a24-1915833425467265474detect_compiler_family.o.d  409589e8b2cec94-2052187004034091901detect_compiler_family.o.d  40a3e48e3de92fb8-7961056145768690802detect_compiler_family.o.d  42718c7b0f4f8747-11872620967720092467detect_compiler_family.o.d  428135c657159d4c-548882697517940209detect_compiler_family.o.d  42932a2af8f7fb32-18256122490632525310detect_compiler_family.o.d  42954abedb65d6ef-14476605446257733499detect_compiler_family.o.d  4509d8a46208fbff-4363571577816055914detect_compiler_family.o.d  4569370d734e9b2b-16406552457301538035detect_compiler_family.o.d  47ca21b00fa383e9-852575566991371715detect_compiler_family.o.d  49827c20b40bb870-2485294159599444563detect_compiler_family.o.d  49cc9e3826764b9e-4239647403603320518detect_compiler_family.o.d  4b66bc3289b2a88f-6951674967820019020detect_compiler_family.o.d  4c28f25c5537a09d-7360089390570901629detect_compiler_family.o.d  4c653085afec6130-14976220388963355573detect_compiler_family.o.d  4fbf61a4c226b96-8180047617775961080detect_compiler_family.o.d  4fd997333e4a7254-9859796471341072756detect_compiler_family.o.d  (+117 more)
docs/: CHANGELOG-GEMINI_REMOVAL.md
iac/: .gitignore  .terraform.lock.hcl  AGENTS.md  Makefile  OAUTH_CONFIGURATION.md  OAUTH_FLOWS.md  QUICK_REFERENCE.md  README.md  SCHEMA_INTEGRATION.md  SETUP.sh  TERRAFORM_FIXES.md  backend.tf  entra_oauth.tf  gateway-with-interceptor.yaml  gateway.tf  get-token.sh  iam.tf  lambda.tf  locals.tf  login.sh  main.tf  outputs.tf  providers.tf  refresh-token.sh  terraform.tfvars  terraform.tfvars.example  variables.tf
src/: handler.rs  interceptor.rs  lib.rs  main.rs
src/http/: client.rs  mod.rs
src/models/: error.rs  interceptor.rs  mod.rs  open_meteo.rs  personalized.rs  weather.rs
src/tools/: mod.rs  personalized.rs  weather.rs
src/utils/: mod.rs
tests/: handler.rs  integration.rs  interceptor.rs  interceptor_integration.rs  personalized_integration.rs  schema_generation.rs  weather_integration.rs
