[package]
name = "aws-lambda-mcp"
version = "0.1.0"
edition = "2024"

[lib]
name = "aws_lambda_mcp"
path = "src/lib.rs"

[[bin]]
name = "aws-lambda-mcp"
path = "src/main.rs"

# generate-schema is a utility binary, not for lambda deployment
# Run with: cargo run --bin generate-schema
[[bin]]
name = "generate-schema"
path = "src/bin/generate_schema.rs"
required-features = ["schema-gen"]

[dependencies]
anyhow = "1"
tokio = { version = "1", features = ["macros"] }
lambda_runtime = { version = "0.14", features = ["anyhow"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "json"] }
schemars = "1"
reqwest = { version = "0.12", default-features = false, features = [
    "json",
    "rustls-tls-native-roots",
    "gzip",
    "brotli",
    "zstd",
    "deflate",
    "http3",
] }
reqwest-middleware = "0.4"
reqwest-tracing = "0.5"
urlencoding = "2.1.3"
rmcp = { version = "0.8", features = ["macros", "schemars"] }

[features]
schema-gen = []

[profile.release]
opt-level = "z"
lto = true
codegen-units = 1
panic = "abort"
debug = false
incremental = false
overflow-checks = false
strip = true

[lints.rust]
unsafe_code = "deny"

[lints.clippy]
nursery = "deny"
unwrap_used = "deny"
expect_used = "deny"
panic = "deny"
string_slice = "deny"
pedantic = "deny"

[package.metadata.lambda.deploy]
memory = 128                    # Function's memory
timeout = 30                    # Function's execution timeout
# tracing = "active"              # Tracing mode
# role = "role-full-arn"          # Function's execution role
# env_file = ".env.production"    # File to load environment variables from
# env = { "VAR1" = "VAL1" }       # Additional environment variables
# layers = [ "layer-full-arn" ]   # List of layers to deploy with your function
# tags = { "team" = "lambda" }    # List of AWS resource tags for this function
# s3_bucket = "deploy-bucket"     # S3 bucket to upload the Lambda function to
# s3_key = "prefix/bootstrap.zip" # S3 object key to upload the Lambda function to
# include = [ "README.md" ]       # Extra list of files to add to the zip bundle